<resources>
    <string name="app_name">Calculator</string>
    <string name="ac">AC</string>
    <string name="backspace">⌫</string>
    <string name="ans">ans</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="minus">−</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="adv">adv</string>
    <string name="basic">basic</string>
    <string name="second">2nd</string>
    <string name="deg">deg</string>
    <string name="rad">rad</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="asin">asin</string>
    <string name="acos">acos</string>
    <string name="atan">atan</string>
    <string name="xy">xʸ</string>
    <string name="lg">lg</string>
    <string name="ln">ln</string>
    <string name="bracket_open">(</string>
    <string name="bracket_close">)</string>
    <string name="sqrt">√x</string>
    <string name="factorial">x!</string>
    <string name="inv">1/x</string>
    <string name="pi">π</string>
    <string name="e">e</string>
</resources>